# react-component

./: Cargo.toml  README.md
src/: cli.rs  component.rs  main.rs  template.rs
src/templates/: component-test.txt  component.txt
