[package]
name = "react-component"
version = "0.1.1"
edition = "2021"
description = "A CLI tool to generate React component files"
authors = ["William Roberts"]
license = "MIT"
repository = "https://github.com/wbroberts/react-component"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
tera = "1.17.1"
