[package]
name = "react-component"
version = "0.2.3"
edition = "2021"
description = "A CLI tool to generate React component files"
authors = ["William Roberts"]
license = "MIT"
repository = "https://github.com/wbroberts/react-component"

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
colored = "2.0.0"
serde = { version = "1.0.152", features = ["derive"] }
tinytemplate = "1.2.1"
